[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scanes/menu font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scanes/Menu/Settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://Textures/jinx.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Container" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Panel" type="Panel" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="TabContainer" type="TabContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 1 )

[node name="Settings" type="Tabs" parent="Container/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 54.0
margin_right = -4.0
margin_bottom = -4.0

[node name="FOV" type="Container" parent="Container/TabContainer/Settings"]
margin_right = 1280.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -215, -83 )

[node name="HSlider" type="HSlider" parent="Container/TabContainer/Settings/FOV"]
margin_left = 960.0
margin_right = 1260.0
margin_bottom = 20.0
min_value = 1.0
max_value = 179.0
value = 1.0

[node name="Label" type="Label" parent="Container/TabContainer/Settings/FOV"]
margin_left = 900.0
margin_right = 934.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "70"

[node name="RichTextLabel" type="RichTextLabel" parent="Container/TabContainer/Settings/FOV"]
margin_right = 100.0
margin_bottom = 36.0
custom_fonts/normal_font = ExtResource( 1 )
text = "FOV"
scroll_active = false

[node name="Ressolution" type="Container" parent="Container/TabContainer/Settings"]
margin_top = 50.0
margin_right = 1280.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -215, -83 )

[node name="RichTextLabel" type="RichTextLabel" parent="Container/TabContainer/Settings/Ressolution"]
margin_right = 170.0
margin_bottom = 40.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Resollution"
scroll_active = false

[node name="OptionButton" type="OptionButton" parent="Container/TabContainer/Settings/Ressolution"]
margin_left = 1160.0
margin_right = 1260.0
margin_bottom = 30.0
text = "1920x1080"
items = [ "640x360", null, false, 0, null, "1280x720", null, false, 1, null, "1920x1080", null, false, 2, null ]
selected = 2

[node name="Fullscreen" type="Container" parent="Container/TabContainer/Settings"]
margin_left = 3.0
margin_top = 100.0
margin_right = 1283.0
margin_bottom = 150.0

[node name="Label" type="Label" parent="Container/TabContainer/Settings/Fullscreen"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="Container/TabContainer/Settings/Fullscreen"]
margin_left = 1184.0
margin_right = 1260.0
margin_bottom = 40.0

[node name="Keybinds" type="Tabs" parent="Container/TabContainer"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="Jinx" type="Sprite" parent="Container/TabContainer/Keybinds"]
position = Vector2( 590, 437 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 640.0
margin_top = 670.0
margin_right = -520.0
custom_fonts/font = ExtResource( 1 )
text = "EXIT"

[connection signal="value_changed" from="Container/TabContainer/Settings/FOV/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="item_selected" from="Container/TabContainer/Settings/Ressolution/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="Container/TabContainer/Settings/Fullscreen/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Container/Button" to="." method="_on_Button_pressed"]
